# bedfellow

./: .env.dev  .env.example  .env.jest  .env.prod  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .yarnrc.yml  App.theme.example.tsx  App.tsx  CLAUDE.md  README.md  ReactotronConfig.js  app.json  babel.config.js  clean-rebuild.sh  jest.config.js  metro.config.js  package-lock.json  package.json  react-native.config.js  setupJest.js  tsconfig.json
server/bedfellow-api/: Cargo.toml  Dockerfile
server/bedfellow-api/src/: README.md  main.rs  run_python.sh  run_python_search.sh
server/bedfellow-api/src/controllers/: mod.rs  spotify_controller.rs  whosampled_controller.rs
server/bedfellow-api/src/lastfm/: lastfm_controller.rs  mod.rs
server/bedfellow-api/src/python/: scraper.py  search.py
server/bedfellow-api/src/spotify/: mod.rs  spotify_controller.rs
server/bedfellow-api/src/whosampled/: mod.rs  structs.rs  whosampled_controller.rs  whosampled_service.rs
server/bedfellow-db-api/: API_DOCS.md  Cargo.toml  Dockerfile  docker-compose.yml
server/bedfellow-db-api/db/: init.sql  test_indexes.sql
server/bedfellow-db-api/src/: bedfellow-openapi-3.yml  handlers.rs  lib.rs  main.rs  models.rs  pagination.rs  queries.rs  schema.rs
server/bedfellow-db-api/tasks/: pr-122-feedback-summary.md  pr-122-feedback.md
server/bedfellow-db-api/test_resource/: sample-create-payload.0.json  sample-create-payload.1.json
server/bedfellow-db-api/tests/: search_test.rs  test.rs
server/bedfellow-db-api/tests/fixtures/: prefill.sql  schema.sql  (+1 more)
(+284 files in other folders)
