[package]
name = "bedfellow-api"
version = "0.1.0"
authors = ["Dublin Anondson <stratophone2112@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4"
env_logger = "0.8.4"
log = "0.4"
base64 = "0.13.0"
reqwest = { version = "0.11.11", features = ["json", "cookies", "rustls-tls"] }
json = "0.12.4"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
scraper = "0.16.0"
selectors = "0.22.0"
ego-tree = "0.6.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
